--- a/styles/styles.css
+++ b/styles/styles.css
@@ -234,13 +234,15 @@ main img {
   height: auto;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 768px) {
   main .section {
-    padding: 64px 32px;
+    padding: 0;
+    width: 756px;
+    margin: auto;
   }
 }
 
-@media (min-width: 900px) {
+@media (min-width: 992px) {
   :root {
     --heading-font-size-xxl: 6.0rem;
     --heading-font-size-xl: 4.8rem;
@@ -253,6 +255,16 @@ main img {
   .section > div {
     max-width: 1200px;
     margin: auto;
+  }
+
+  main .section {
+    width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  main .section {
+    width: 1300px;
   }
 }
 
