--- a/blocks/cards-hero/cards-hero.css
+++ b/blocks/cards-hero/cards-hero.css
@@ -12,8 +12,10 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-flow: column;
+  grid-template-rows: 2fr 1fr 1fr;
   gap: 20px;
 }
 
@@ -32,10 +34,6 @@
   position: relative;
 }
 
-.block.cards-hero ul li:first-of-type {
-  grid-area: lg;
-}
-
 .block.cards-hero ul li > div {
   pointer-events: none;
   cursor: pointer;
@@ -43,6 +41,15 @@
   bottom: 30px;
   left: 30px;
   color: white;
+}
+
+.block.cards-hero ul li > div h3 {
+  font-family: var(--ff-volvo-novum-medium);
+  font-size: 2.4rem;
+}
+
+.block.cards-hero ul li > div p {
+  font-family: var(--ff-volvo-novum-medium);
 }
 
 .block.cards-hero ul li > div a:any-link {
@@ -53,13 +60,14 @@
   .block.cards-hero ul {
     display: grid;
     grid-template: 'lg sm-1' 1fr 'lg sm-2' 1fr / 7fr 3fr;
-    list-style: none;
-    padding: 0;
-    margin: 0;
     gap: 10px;
   }
 
   .block.cards-hero ul li:not(:first-of-type) img {
     max-height: unset;
+  }
+
+  .block.cards-hero ul li:first-of-type {
+    grid-area: lg;
   }
 }
