fix linting issue

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,7 +5,7 @@ footer * {
 .footer-wrapper {
   padding-left: 15px;
   padding-right: 15px;
-  margin: 48px auto 0 auto;
+  margin: 48px auto 0;
 }
 
 .footer-wrapper p, .footer-wrapper ul {
@@ -13,16 +13,16 @@ footer * {
   font-size: 14px;
 }
 
-.footer-wrapper .footer--links {
+.footer-wrapper .footer-links {
   margin: 0 -15px;
   background-color: #000;
 }
 
-.footer-wrapper .footer--links ul {
+.footer-wrapper .footer-links ul {
   text-align: center;
 }
 
-.footer-wrapper .footer--links ul li {
+.footer-wrapper .footer-links ul li {
   margin: 8px 0;
   padding: 0 12px;
   display: inline-block;
@@ -30,22 +30,22 @@ footer * {
   border-right: 1px solid #fff;
 }
 
-.footer-wrapper .footer--links ul li:last-child {
+.footer-wrapper .footer-links ul li:last-child {
   border-right: none;
 }
 
-.footer-wrapper .footer--links ul li a {
+.footer-wrapper .footer-links ul li a {
   text-decoration: none;
   color: #fff;
 }
 
-.footer-wrapper .footer--copyright {
+.footer-wrapper .footer-copyright {
   margin: 0 -15px;
   padding: 32px 0;
   text-align: center;
 }
 
-.footer-wrapper .footer--copyright p {
+.footer-wrapper .footer-copyright p {
   margin: 0;
   color: #A7A8A9;
 }
