--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -15,3 +15,11 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: VolvoBroadProDigital;
+  src: url('/fonts/volvobroadprodigital.woff') format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
