--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -78,7 +78,7 @@ main .hero img {
         bottom: 0;
         right: 0;
         left: 0;
-        background: linear-gradient(-180deg,rgba(0,0,0,0),rgba(0,0,0,.8)) repeat-x;
+        background: linear-gradient(-180deg,rgb(0 0 0 / 0%),rgb(0 0 0 / 80%)) repeat-x;
     }
 }
 
@@ -95,7 +95,7 @@ main .hero img {
 
     main .hero picture::after {
         top: 0;
-        background-image: linear-gradient(-30deg,rgba(0,0,0,0),rgba(0,0,0,.4));
+        background-image: linear-gradient(-30deg,rgba(0 0 0 / 0%),rgba(0 0 0 / 40%));
     }
 }
 
