--- a/blocks/teaser-cards/teaser-cards.css
+++ b/blocks/teaser-cards/teaser-cards.css
@@ -1,135 +1,132 @@
 /* boilderplate: the section containing the block */
 .section.teaser-cards-container {
-    padding: 0;
+  padding: 0;
 }
 
 /* boilerplate: the wrapper around the block element */
 .section.cards-hero-container .cards-hero-wrapper {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 /* boilerplate: the block element itself that gets passed into js decorate() */
 .block.teaser-cards {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 /* mobile */
 
 /* first row div */
-.block.teaser-cards > div {
-    display:flex;
-    flex-flow: column;
-    margin: 0;
-    padding: 0;
+.block.teaser-cards>div {
+  display: flex;
+  flex-flow: column;
+  margin: 0;
+  padding: 0;
 }
 
 /* each teaser div in the row */
 .block.teaser-cards .teaser {
-    flex: 0 1 auto;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding: 0px 30px 15px 30px;
+  flex: 0 1 auto;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px 30px 15px 30px;
 }
 
 /* teaser image */
 .block.teaser-cards .teaser p.image {
-    margin: 0;
+  margin: 0;
 }
 
-.block.teaser-cards .teaser p.image picture {
-
-}
+.block.teaser-cards .teaser p.image picture {}
 
 /* teaser title */
 .block.teaser-cards .teaser h3 {
-    margin-bottom: 10px;
-    font-family: var(--ff-volvo-novum-medium);
-    font-size: var(--heading-font-size-m)   
+  margin-bottom: 10px;
+  font-family: var(--ff-volvo-novum-medium);
+  font-size: var(--heading-font-size-m)
 }
 
 /* teaser title link */
 .block.teaser-cards .teaser h3 a {
-    color: var(--text-color);
+  color: var(--text-color);
 }
 
 .block.teaser-cards .teaser h3 a::after {
-    color: var(--link-color);
-    content: "\f105";
-    padding-left: 8px;
-    font-family: 'fontawesome';
+  color: var(--link-color);
+  content: "\f105";
+  padding-left: 8px;
+  font-family: 'fontawesome';
 }
 
 /* teaser text */
 .block.teaser-cards .teaser p.text {
-    font-size: var(--body-font-size-xxs)  ;
-    margin: 0 0 8px; 
+  font-size: var(--body-font-size-xxs);
+  margin: 0 0 8px;
 }
 
 /* cta's (maybe remove button container completely)*/
 .block.teaser-cards .teaser .button-container {
-    margin: 0px;
+  margin: 0px;
 }
 
 .block.teaser-cards .teaser .cta {
-    color: var(--link-color);
-    font-weight: 700;
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    margin: 0px;
-    font-family: var(--ff-volvo-novum-regular);
-    font-size: var(--body-font-size-xs);
+  color: var(--link-color);
+  font-weight: 700;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin: 0px;
+  font-family: var(--ff-volvo-novum-regular);
+  font-size: var(--body-font-size-xs);
 }
 
 .block.teaser-cards .teaser .cta::after {
-    content: '\f105';
-    font-family: 'fontawesome';
-    padding-left: 8px;
+  content: '\f105';
+  font-family: 'fontawesome';
+  padding-left: 8px;
 
 }
 
 @media (min-width: 768px) {
-    .block.teaser-cards {
-        width:726px;
-        margin-left:auto;
-        margin-right:auto;
-    }
+  .block.teaser-cards {
+    width: 726px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-    /* first row div */
-    .block.teaser-cards > div {
-        flex-flow: row;
-    }
+  /* first row div */
+  .block.teaser-cards>div {
+    flex-flow: row;
+  }
 
-/* each teaser div in the row */
-    .block.teaser-cards .teaser {
-        padding-left: 15px;
-        padding-right:15px;
-        width:50%;
-    }
+  /* each teaser div in the row */
+  .block.teaser-cards .teaser {
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 50%;
+  }
 }
-  
+
 
 @media (min-width: 992px) {
 
-    .block.teaser-cards {
-        width:1170px;
-        margin-left:auto;
-        margin-right:auto;
-    }
+  .block.teaser-cards {
+    width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-    .block.teaser-cards .teaser {
-        padding-left:15px;
-        padding-right:15px;
-    }
+  .block.teaser-cards .teaser {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 
-    .block.teaser-cards .teaser h3 {
-        margin-bottom: 10px;
-        font-family: var(--ff-volvo-novum-medium);
-        font-size: var(--heading-font-size-s)   
-    }
+  .block.teaser-cards .teaser h3 {
+    margin-bottom: 10px;
+    font-family: var(--ff-volvo-novum-medium);
+    font-size: var(--heading-font-size-s)
+  }
 }
 
-@media (min-width: 1300px) {
-}
+@media (min-width: 1300px) {}
