--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,7 +33,7 @@
 }
 
 @font-face {
-  font-family: 'fontawesome';
+  font-family: fontawesome;
   src: url('../fonts/fontawesome-webfont.woff') format("woff");
   font-weight: 400;
   font-style: normal;
