--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,6 +32,14 @@
   line-gap-override: normal;
 }
 
+@font-face {
+  font-family: 'FontAwesome';
+  src: url(/fonts/fontawesome-webfont.woff) format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap
+}
+
  :root {
   /* colors */
   --link-color: #035fe6;
@@ -46,6 +54,7 @@
   /* fonts */
   --ff-volvo-novum-medium: 'VolvoNovum-Medium', 'VolvoNovum-Medium Fallback', sans-serif;
   --ff-volvo-novum: 'VolvoNovum', 'VolvoNovum Fallback', sans-serif;
+  --ff-fontawesome: 'fontawesome'
   --body-font-family: var(--ff-volvo-novum);
   --heading-font-family: var(--ff-volvo-novum-medium);
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
