--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,8 +33,8 @@
 }
 
 @font-face {
-  font-family: 'FontAwesome';
-  src: url(/fonts/fontawesome-webfont.woff) format("woff");
+  font-family: FontAwesome;
+  src: url("/fonts/fontawesome-webfont.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap
