--- a/blocks/teaser-grid/teaser-grid.css
+++ b/blocks/teaser-grid/teaser-grid.css
@@ -69,10 +69,14 @@
 .block.teaser-grid>ul>li h3 {
     font-family: var(--ff-volvo-novum-medium);
     font-size: 2.4rem;
+    line-height: 1.3333;
+    margin: 0 0 0.3333em;
 }
 
 .block.teaser-grid>ul>li p {
     font-family: var(--ff-volvo-novum-medium);
+    line-height: 1.5;
+    margin: 0;
 }
 
 .block.teaser-grid>ul>li a:any-link {
