fix: border radius on focus of cta

--- a/blocks/teaser-cards/teaser-cards.css
+++ b/blocks/teaser-cards/teaser-cards.css
@@ -79,6 +79,7 @@
   font-weight: 700;
   background-color: transparent;
   border: none;
+  border-radius: unset;
   padding: 0;
   margin: 0;
   font-family: var(--ff-volvo-novum-regular);
