--- a/blocks/teaser-cards/teaser-cards.css
+++ b/blocks/teaser-cards/teaser-cards.css
@@ -36,7 +36,7 @@
 /* teaser image */
 .block.teaser-cards .teaser p.image {
   display: block;
-  margin: 0 0 1em 0;
+  margin: 0 0 1em;
 }
 
 .block.teaser-cards .teaser img {
@@ -115,8 +115,8 @@
   }
 
   /* first row div */
-  .block.teaser-cards.link-list-on-mobile>div,
-  .block.teaser-cards>div {
+  .block.teaser-cards>div,
+  .block.teaser-cards.link-list-on-mobile>div {
     flex-flow: row;
   }
 
