--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -25,7 +25,7 @@
 }
 
 @font-face {
-  font-family: 'fontawesome';
+  font-family: fontawesome;
   font-style: normal;
   font-weight: 400;
   font-display: swap;
