--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -1,7 +1,7 @@
-.carousel-container {
+.section.carousel-container {
     text-align: center;
-    margin-top: 48px;
-    margin-bottom: 48px;
+    margin: 48px 0;
+    padding: 0;
 }
 
 .carousel-container .default-content-wrapper h3 {
