--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -1,7 +1,7 @@
 .section.carousel-container {
     text-align: center;
-    margin: 48px 0;
-    padding: 0;
+    margin-top: 48px;
+    margin-bottom: 48px;
 }
 
 .carousel-container .default-content-wrapper h3 {
