--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -2,6 +2,7 @@
     text-align: center;
     margin-top: 48px;
     margin-bottom: 48px;
+    padding: unset;
 }
 
 .carousel-container .default-content-wrapper h3 {
