--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -120,6 +120,14 @@
     .carousel-wrapper .grid-on-desktop ul.controls {
         display: none;
     }
+
+    .carousel-wrapper ul.carousel-list li:first-child {
+        padding-left: unset;
+    }
+    
+    .carousel-wrapper ul.carousel-list li:last-child {
+        padding-right: unset;
+    }
 }
 
 @media  screen and (min-width: 992px) {
