feat: specifications table

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -93,6 +93,12 @@
 
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 html {
   font-size: 10px;
 }
@@ -223,7 +229,7 @@ main input:hover {
 }
 
 main .section {
-  padding: 64px 16px;
+  padding: 64px 0;
 }
 
 main pre {
