--- a/blocks/specifications/specifications.css
+++ b/blocks/specifications/specifications.css
@@ -1,44 +1,91 @@
 .block.specifications {
     --grid-col-count: 1;
-
-    display: grid;
-    grid-auto-rows: auto;
+    --grid-col-show: 1;
+    --grid-rowheader-width: 35%;
 }
 
 .block.specifications p {
     margin: 0 0 24px;
+    line-height: 1.5;
+}
+
+.block.specifications img {
+    display: block;
+    margin: 0 auto;
+    max-height: 68px;
 }
 
 .block.specifications p:last-child {
     margin-bottom: 0;
 }
 
-.block.specifications .row {
+.block.specifications .row,
+.block.specifications .column-header,
+.block.specifications .image-header {
     column-gap: 1px;
+    display: grid;
+    grid-template-columns: var(--grid-rowheader-width) 1fr;
 }
 
 .block.specifications .cell {
     padding: 15px;
-    display: flex;
+    font-size: 16px;
     flex-direction: column;
     justify-content: center;
+    display: none;
+}
+
+.block.specifications .cell.expand,
+.block.specifications .row .cell:first-child {
+    display: flex;
 }
 
 .block.specifications .row:nth-child(2n-1) .cell {
     background-color: #F2F2F2;
 }
 
-.block.specifications .row.column-header .cell {
+.block.specifications .column-header {
+    display: none;
+}
+
+.block.specifications .column-header-mobile,
+.block.specifications .column-header-mobile select,
+.block.specifications .column-header .cell {
     background-color: #53565A;
     color: white;
 }
 
-.block.specifications .row.image-header .cell {
+.block.specifications .column-header-mobile {
+    position: relative;
+}
+
+.block.specifications .column-header-mobile select {
+    width: 100%;
+    padding: 15px;
+    font-size: 16px;
+    text-align: center;
+    appearance: none;
+    position: relative;
+}
+
+.block.specifications .column-header-mobile::after {
+    display: block;
+    content: '\f078';
+    /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
+    font-family: fontawesome;
+    position: absolute;
+    font-size: 11px;
+    top: 17px;
+    right: 17px;
+}
+
+.block.specifications .image-header .cell {
     background-color: unset;
+    grid-column: span 2;
 }
 
 .block.specifications [role="rowheader"] {
-    font-weight: 700;
+    font-family: var(--ff-volvo-novum-medium);
 }
 
 .block.specifications [role="rowgroup"] {
@@ -47,7 +94,7 @@
     transition: height 200ms ease-out
 }
 
-.block.specifications .row.rowgroup-header button {
+.block.specifications .rowgroup-header {
     display: flex;
     justify-content: space-between;
     align-items: center;        
@@ -62,30 +109,66 @@
     width: 100%
 }
 
-.block.specifications .row.rowgroup-header button:focus,
-.block.specifications .row.rowgroup-header button:hover {
+.block.specifications .rowgroup-header:not(:first-child) {
+    border-top: solid #F2F2F2;
+}
+
+.block.specifications .rowgroup-header:focus,
+.block.specifications .rowgroup-header:hover {
     background-color: #E1DFDD;
 }
 
-.block.specifications .row.rowgroup-header button::after {
+.block.specifications .rowgroup-header::after {
     display: block;
     content: '\f067';
     /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
     font-family: fontawesome;
 }
 
+@media screen and (min-width: 481px) {
+    .block.specifications {
+        --grid-rowheader-width: 25%;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .block.specifications {
+        --grid-rowheader-width: 18%;
+    }
+}
+
 @media screen and (min-width: 768px) {
     .block.specifications {
-        grid-template-columns: 1fr;
+        --grid-rowheader-width: 115px;
     }
 
-    .block.specifications .row {
+    .block.specifications .column-header-mobile {
+        display: none;
+    }
+
+    .block.specifications .row,
+    .block.specifications .column-header,
+    .block.specifications .image-header {
         display: grid;
-        grid-template-columns: 200px repeat(calc(var(--grid-col-count) - 1), minmax(0, 1fr));
+        grid-template-columns: var(--grid-rowheader-width) repeat(calc(var(--grid-col-count) - 1), minmax(0, 1fr));
+    }
+
+    .block.specifications .cell {
+        display: flex;
+    }
+
+    .block.specifications .image-header .cell {
+        grid-column: span 1;
     }
 
     /* offset the image header by one */
-    .block.specifications .row.image-header .cell:first-child {
+    .block.specifications .image-header .cell:first-child {
         grid-column-start: 2;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .block.specifications {
+        --grid-rowheader-width: 200px;
     }
 }
