--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,6 +111,7 @@ body {
   color: var(--text-color);
   background-color: var(--background-color);
   display: none;
+  -webkit-font-smoothing: antialiased;
 }
 
 body.appear {
@@ -266,7 +267,6 @@ hr {
 
 main img {
   max-width: 100%;
-  width: auto;
   height: auto;
 }
 
