--- a/styles/styles.css
+++ b/styles/styles.css
@@ -271,6 +271,29 @@ main p img {
   margin: auto;
 }
 
+main .section-with-background { 
+  --text-color: white;
+
+  box-sizing: border-box;
+  position: relative;
+  min-height: 405px;
+  color: var(--text-color);
+  text-align: center;
+}
+
+main .section-with-background>picture:last-of-type img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  object-fit: cover;
+}
+
 @media (min-width: 768px) {
   main .section {
     width: 756px;
