--- a/styles/styles.css
+++ b/styles/styles.css
@@ -174,6 +174,10 @@ pre {
   overflow: scroll;
 }
 
+strong {
+  font-family: var(--ff-volvo-novum-medium);
+}
+
 /* buttons */
 
 a.button:any-link, button {
@@ -277,7 +281,7 @@ main p img {
   margin: auto;
 }
 
-main .section-with-background { 
+main .section-with-background {
   --text-color: white;
 
   box-sizing: border-box;
@@ -342,3 +346,5 @@ main .section[data-section-status='initialized'] {
 main .section.highlight {
   background-color: var(--highlight-background-color);
 }
+
+
