--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -131,3 +131,19 @@
   padding-top: 0;
   padding-bottom: 0;
 }
+
+.body-dealer-locator header.header-wrapper,
+.body-dealer-locator footer.footer-wrapper{
+  display: none;
+}
+
+.body-dealer-locator main .section {
+  padding: 0;
+}
+
+@media (min-width: 768px) {
+  .body-dealer-locator main .section {
+    padding: 0;
+    margin: 0;
+  }
+}
