feat: add tabbed accordion block

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -336,3 +336,51 @@ main .section[data-section-status='initialized'] {
 main .section.highlight {
   background-color: var(--highlight-background-color);
 }
+
+
+.section.tabbed-container {
+  padding: 0;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.section.tabbed-container-full-width {
+  width: unset;
+}
+
+.section.tabbed-container-full-width > div {
+  max-width: unset;
+}
+
+.section.tabbed-container ul.tab-navigation {
+  padding: 0;
+  margin: 25px;
+  text-align: center;
+}
+
+.section.tabbed-container ul.tab-navigation li {
+  margin: 0 auto;
+  padding: 0 1% 8px;
+  display: block;
+  width: 35%;
+}
+
+.section.tabbed-container ul.tab-navigation button {
+  background: 0 0;
+  color: var(--volvo-text-gray);
+  padding: 0;
+  margin: 0;
+}
+
+.section.tabbed-container ul.tab-navigation li.active,
+.section.tabbed-container ul.tab-navigation li:hover {
+  border-bottom: 3px solid #004FBC;
+}
+
+@media screen and (min-width: 496px) {
+  .section.tabbed-container ul.tab-navigation li {
+      margin: 0 3%;
+      display: inline-block;
+      width: unset;
+  }
+}
