--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -20,17 +20,18 @@
 
  .carousel-container .carousel-wrapper {
     overflow: hidden;
-    padding: 0 15px;
  }
 
 .carousel-wrapper ul.carousel-list {
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding: 0 20%;
     display: flex;
     gap: 0;
     overflow-x: scroll;
     scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+    scroll-padding: 20%;
     scrollbar-width: none;
 }
 
@@ -39,7 +40,8 @@
  }
 
 .carousel-wrapper ul.carousel-list li {
-    flex: 0 0 65%;
+    flex: 0 0 100%;
+    scroll-snap-align: start;
 }
 
 .carousel-wrapper ul.controls {
@@ -71,15 +73,7 @@
     background: 0 0;
  }
 
-.carousel-wrapper ul.carousel-list li:first-child {
-    padding-left: 20%;
-}
-
-.carousel-wrapper ul.carousel-list li:last-child {
-    padding-right: 20%;
-}
-
- .carousel-wrapper ul.controls li button::before {
+.carousel-wrapper ul.controls li button::before {
     font-family: var(--ff-fontawesome);
     font-size: 1.6rem;
     line-height: 3.2rem;
@@ -111,22 +105,23 @@
 
 @media screen and (min-width: 768px) {
     .carousel-wrapper .grid-on-desktop ul.carousel-list {
-        display: grid;
-        grid-template-rows: repeat(2, 1fr);
-        grid-template-columns: repeat(3, 1fr);
-        grid-gap: 30px;
+        overflow-x: visible;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 30px;
+        padding: 0;
     }
 
-    .carousel-wrapper .grid-on-desktop ul.controls {
+    .carousel-wrapper .grid-on-desktop ul.carousel-list li {
+        flex: 0 0 calc(33.33% - 20px);
+    }
+
+    .carousel-wrapper ul.controls {
         display: none;
     }
 
-    .carousel-wrapper ul.carousel-list li:first-child {
-        padding-left: unset;
-    }
-    
-    .carousel-wrapper ul.carousel-list li:last-child {
-        padding-right: unset;
+    .carousel-wrapper ul.carousel-list li {
+        padding: 0;
     }
 }
 
